[package]
name = "lightray"
version = "0.1.0"
authors = ["Greg Priessnitz <greg.priessnitz@gmail.com>", "Armen Aghajanyan <armen.ag@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.1.1"
actix-web = "1.0.9"
listenfd = "0.3"