[package]
name = "lightray"
version = "0.1.0"
authors = ["Greg Priessnitz <greg.priessnitz@gmail.com>", "Armen Aghajanyan <armen.ag@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[workspace]

[dependencies]
lightray-core = { path = "lightray_core" }
tch = "0.1.3"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
actix-utils = "1.0.4"
bytes = "0.5.3"
derive_more = "0.99.0"
failure = "0.1.6"
futures = "0.3.1"
listenfd = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
sys-info = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }