[package]
name = "lightray-core"
version = "0.1.0"
authors = ["Greg Priessnitz <greg.priessnitz@gmail.com>", "Armen Aghajanyan <armen.ag@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tch = "0.1.3"
listenfd = "0.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
failure = "0.1.6"
sys-info = "0.5.8"
crossbeam-queue = "0.2"
tokio = { version = "0.2.6", features = ["full"] }
async-trait = "0.1.22"